<resources>
    <string name="app_name" translatable="false">BITS Box</string>
    <string name="app_name_long" translatable="false">BITS Box for Android</string>
    <string name="app_desc">Professional VPN/proxy solution by Banten IT Solutions.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="app_version">BITS Box</string>
    <string name="version_x">BITS Box (%s)</string>
    <string name="about_sing_box">Singbox</string>
    <string name="about_website">Website</string>
    <string name="about_website_value">Banten IT Solutions</string>
    <string name="about_website_url">https://bits.co.id</string>
    <string name="about_github">GitHub</string>
    <string name="about_github_value">BITS Box</string>
    <string name="about_github_url">https://github.com/Banten-IT-Solutions/BITS-Box</string>
    <string name="about_privacy">Privacy Policy</string>
    <string name="about_privacy_url">https://bits.co.id/privacy</string>
    <string name="about_terms">Terms of Service</string>
    <string name="about_terms_url">https://bits.co.id/terms</string>
    <string name="about_license">Open Source License</string>
    <string name="about_copyright">Banten IT Solutions</string>
    <string name="logcat">Export</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_home">Home</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="menu_more">More</string>
    <string name="theme">Theme</string>
    <string name="group_default">BITS Cloud</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_enable">Enable</string>
    <string name="quick_disable">Disable</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_connect">Connect</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_download">Download</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_create">Create group</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%1$d Proxies | Updated on %2$s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%1$s: Updated %2$d proxies</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_success_count">✓ %d</string>
    <string name="connection_test_error_count">✗ %d</string>
    <string name="connection_test_total">%d total</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (Optional)</string>
    <string name="password_opt">Password (Optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer encryption</string>
    <string name="network">Network</string>
    <string name="ws_host">WebSocket Host</string>
    <string name="ws_path">WebSocket Path</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="grpc_service_name">gRPC ServiceName</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="ipv6">IPv6 Route</string>
    <string name="prefer">Prefer</string>
    <string name="only">Only</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create Route</string>
    <string name="delete_route_prompt">Are you sure you want to remove this route?</string>
    <string name="route_name">Route Name</string>
    <string name="route_domain">Domain</string>
    <string name="route_ip_destination">IP Destination</string>
    <string name="route_port_destination">Port Destination</string>
    <string name="route_ip_source">IP Source</string>
    <string name="route_port_source">Port Source</string>
    <string name="route_network">Network</string>
    <string name="route_protocol">Protocol</string>
    <string name="route_outbound">Outbound</string>
    <string name="route_proxy">Proxy</string>
    <string name="route_bypass">Bypass</string>
    <string name="route_block">Block</string>
    <string name="route_profile">Select Profile…</string>
    <string name="empty_route">Empty Route</string>
    <string name="empty_route_notice">Set some rules before saving</string>
    <string name="route_bypass_domain">Domain rule for %s</string>
    <string name="route_bypass_ip">IP rule for %s</string>
    <string name="route_reset">Reset</string>
    <string name="route_reset_message">Are you sure you want to reset all routes?</string>
    <string name="route_manage_assets">Manage Route Assets</string>
    <string name="route_assets">Assets</string>
    <string name="route_rules_variant">Rule Assets Variant</string>
    <string name="route_rules_minimal">Minimal</string>
    <string name="route_rules_full">Full</string>
    <string name="route_asset_status">Local version: %s</string>
    <string name="route_asset_no_update">No update</string>
    <string name="route_asset_updated">Updated</string>
    <string name="route_not_asset">Not an asset file: excepted .db, but %s</string>
    <string name="route_opt_bypass_lan">Bypass LAN</string>
    <string name="route_opt_block_ads">Block Ads</string>
    <string name="route_opt_block_quic">Block QUIC</string>
    <string name="traffic_sniffing">Enable Traffic Sniffing</string>
    <string name="enable_mux">Enable Multiplexer</string>
    <string name="mux_sum">Mux is designed to reduce TCP handshake latency, not to increase
        connection throughput. Using Mux to watch videos, download or speed test is usually counter
        productive. If the server does not support it, you will not be able to access the Internet.</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="add_profile">Add Profile</string>
    <string name="action_shadowsocks" translatable="false">Shadowsocks</string>
    <string name="action_vmess" translatable="false">VMess</string>
    <string name="action_vless" translatable="false">VLESS</string>
    <string name="action_trojan" translatable="false">Trojan</string>
    <string name="action_trojan_go" translatable="false">Trojan Go</string>
    <string name="proxy_chain">Proxy Chain</string>
    <string name="custom_config">Custom Config</string>
    <string name="clear_profiles">Clear</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import Clipboard</string>
    <string name="action_import_file">Import File</string>
    <string name="delete">Remove</string>
    <string name="share_qr_nfc">QR Code</string>
    <string name="add_profile_methods_scan_qr_code">Scan QR</string>
    <string name="add_profile_methods_manual_settings">Manual</string>
    <string name="apply">Apply</string>
    <string name="clear_traffic_statistics">Clear Stats</string>
    <string name="connection_test_clear_results">Clear Results</string>
    <string name="connection_test_tcp_ping" translatable="false">Ping</string>
    <string name="connection_test_url_test" translatable="false">Test</string>
    <string name="apps">Applications</string>
    <string name="group_by">Order by</string>
    <string name="copy">Copy</string>
    <string name="backup_groups_and_configurations">Groups and configurations</string>
    <string name="backup_rules">Routing rules</string>
    <string name="backup_settings">Settings</string>
    <string name="backup_summary">If the routing settings are not backed up with configurations,
        then custom outbounds will be lost.</string>
    <string name="connection_test_delete_unavailable">Delete Unavailable</string>
    <string name="move">Move</string>
    <string name="create_shortcut">Create Shortcut</string>
    <string name="custom_outbound_json">Custom Outbound</string>
    <string name="custom_config_json">Custom Config</string>
    <string name="remove_duplicate">Remove Duplicate</string>
    <string name="update_current_subscription">Update Subs</string>
    <string name="reset_settings">Restore default settings</string>
</resources>