<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_baseline_speed_24"
        android:title="@string/menu_dashboard" />
    <item
        android:id="@+id/nav_connect"
         android:icon="@drawable/ic_action_lock"
        android:title="@string/menu_connect" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_navigation_menu"
        android:title="@string/menu_more" />
</menu>
