<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_new_ss"
        android:icon="@drawable/ic_qu_shadowsocks_foreground"
        android:title="@string/action_shadowsocks"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_vmess"
        android:icon="@drawable/ic_baseline_airplanemode_active_24"
        android:title="@string/action_vmess"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_vless"
        android:icon="@drawable/baseline_flight_takeoff_24"
        android:title="@string/action_vless"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_trojan"
        android:icon="@drawable/ic_baseline_security_24"
        android:title="@string/action_trojan"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_trojan_go"
        android:icon="@drawable/ic_action_lock"
        android:title="@string/action_trojan_go"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_config"
        android:icon="@drawable/ic_image_edit"
        android:title="@string/custom_config"
        app:iconTint="?attr/mainIconText" />
    <item
        android:id="@+id/action_new_chain"
        android:icon="@drawable/ic_baseline_multiple_stop_24"
        android:title="@string/proxy_chain"
        app:iconTint="?attr/mainIconText" />
</menu>
